force-app/websites/me/objects/Experience__c/Experience__c.object-meta.xml
<CustomObject>
    <description
  >Work history entries powering the "Where I've Worked" section.</description>
    <label>Experience</label>
    <nameField>
        <label>Company</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Experiences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>