force-app/websites/me/objects/Experience__c/fields/Company_URL__c.field-meta.xml
<CustomField>
    <fullName>Company_URL__c</fullName>
    <label>Company URL</label>
    <type>Url</type>
</CustomField>