force-app/websites/me/objects/Experience__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description
  >Leave blank when Is Current is checked (present role).</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>