force-app/websites/me/objects/Experience__c/fields/Highlights__c.field-meta.xml
<CustomField>
    <fullName>Highlights__c</fullName>
    <description>One highlight bullet per line.</description>
    <label>Highlights</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>