force-app/websites/me/objects/Experience__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <length>120</length>
    <type>Text</type>
</CustomField>